INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_BINARY_DIR}")
INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include")
INCLUDE_DIRECTORIES("${CMAKE_BINARY_DIR}")

SET(CMAKE_CXX_STANDARD 11)

SET(CMAKE_AUTOMOC ON)

ADD_EXECUTABLE(benchmarks
	EXCLUDE_FROM_ALL
	benchmark.cpp
)
TARGET_LINK_LIBRARIES(benchmarks lmmslib)
