SUBDIRS = locale midi-maps presets projects samples themes track_icons

menudir = $(datadir)/menu
menu_DATA = lmms

applicationsdir = $(datadir)/applications
applications_DATA = lmms.desktop

mimedir = $(datadir)/mime/packages
mime_DATA = lmms.xml

EXTRA_DIST = $(menu_DATA) $(applications_DATA) $(mime_DATA)

